src/objects/Gift__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>gifts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redeemed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>deal_id__c</fullName>
        <label>deal_id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>giftee_first_name__c</fullName>
        <label>giftee_first_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>giftee_id__c</fullName>
        <label>Giftee_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>giftee_last_name__c</fullName>
        <label>giftee_last_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gifter_id__c</fullName>
        <label>Gifter_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Gift</label>
    <nameField>
        <label>Gift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>